// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compare spooldd handler process method should compare two spooldd in terminal 1`] = `
Object {
  "apiResponse": Object {},
  "commandResponse": "compared string",
  "success": true,
}
`;

exports[`Compare spooldd handler process method should compare two spooldd in terminal with --context-lines option 1`] = `
Object {
  "apiResponse": Object {},
  "commandResponse": "compared string",
  "success": true,
}
`;

exports[`Compare spooldd handler process method should compare two spooldd in terminal with --seqnum specified 1`] = `
Object {
  "apiResponse": Object {},
  "commandResponse": "compared12345678",
  "success": true,
}
`;
